# Tech_Challenge_3

./: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_class_model.ipynb  02_class_model_supervised.ipynb  03_class_model_unsupervised.ipynb
src/: data_loader.py
